# nightcore-karaoke

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  __main__.py  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  code-quality.yml  codeql.yml
docker/: docker-entrypoint.sh
migrations/: env.py
migrations/versions/: 2b50a1eda0df_initial_structure.py  6df008b066d1_initial_structure.py  84a53934ddb1_reinitial_structure.py
src/bot/: client.py  config.py  setup.py
src/bot/components/: embed.py
src/bot/decorators/permissions/: __init__.py  decorator.py  types.py
src/bot/events/: __init__.py  error.py  interaction.py
src/bot/features/config/: __init__.py  _group.py
src/bot/features/config/commands/: setup.py
src/bot/features/config/utils/validator/: __init__.py  helper.py  transform.py  value.py
src/bot/features/karaoke/: __init__.py  _group.py
src/bot/features/karaoke/commands/: announce.py  close.py  rating.py  registration.py  setstaff.py  vote.py
src/bot/features/karaoke/components/: __init__.py
src/bot/features/karaoke/components/modal/: __init__.py  registration.py
src/bot/features/karaoke/components/view/: __init__.py  end.py  karaoke.py  participants.py  ratings.py  registration.py
src/bot/features/karaoke/handlers/: __init__.py  _global.py  button.py  modal.py
src/bot/features/karaoke/utils/: autocomplete.py
src/bot/features/meta/: __init__.py  setup.py
src/bot/features/meta/commands/: __init__.py  ping.py
src/bot/features/system/: __init__.py  _group.py
src/bot/features/system/commands/config/: info.py  setup.py
src/bot/tasks/: __init__.py
src/bot/utils/: object.py
src/bot/utils/log/: on_ready_log.py
src/config/: _global.py  env.py
src/infra/db/: callsite.py  config.py  enums.py  mixins.py  operations.py  session.py  uow.py  utils.py
src/infra/db/models/: __init__.py  base.py  config.py  guild.py  karaoke.py  rating.py  registration.py  staff.py
src/utils/logging/: setup.py
